<resources>
    <string name="app_name">PlanTani</string>

    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="phone">No. HP</string>
    <string name="username">Username</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Ulangi Kata Sandi</string>
    <string name="forgot_password">Lupa Password?</string>
</resources>